--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# Ignore uploaded files in development
+/storage/*
+!/storage/.keep
+/public/uploads
